--- a/Themes-Interior/angular.json
+++ b/Themes-Interior/angular.json
@@ -23,7 +23,9 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "src/assets",
+                "output": "/assets"
+                
               }
             ],
             
@@ -83,7 +85,8 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "src/assets",
+                "output": "/assets"
               }
             ],
             "styles": [
